unifi/unifi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi
  labels:
    app: unifi-network-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-network-application
  template:
    metadata:
      labels:
        app: unifi-network-application
    spec:
      nodeSelector:
        pvc: "true" # pvc only supported on rocky linux nodes
      containers:
        - name: unifi-network-application
          image: linuxserver/unifi-network-application:8.4.59
          volumeMounts:
            - name: pv
              mountPath: /config
      volumes:
        - name: pv
          persistentVolumeClaim:
            claimName: unifi-network-application
