unifi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-network-application
  name: unifi-network-application
  namespace: unifi
spec:
  ports:
  - name: http
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: unifi-network-application
